Edit Removed overflow-hidden as stopped autoscroll

--- a/Movie-Site/src/index.css
+++ b/Movie-Site/src/index.css
@@ -8,10 +8,8 @@
 html,
 body,
 #root {
-  height: 100%;
   margin: 0;
   padding-top: 0px;
-  overflow-x: hidden;
 }
 
 @media screen and (min-width: 425px) {
